--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
@@ -1,1 +1,271 @@
 # Thực hành buổi 3
+
+## 2. Bài tập 8
+
+::: tip 💡 MÔ HÌNH
+
+Cho mô hình như sau : 
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-10-01-28-Screen%20Shot%202021-10-03%20at%2022.37.55.png" width="500">
+:::
+
+### Tạo thư mục và các file
+
+Tạo các file và thư mục như hình bên dưới : 
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-10-06-00-Screenshot%20from%202021-10-04%2010-04-37.png">
+
+Bằng cách thực hiện các lệnh sau: 
+
+```sh
+mkdir ~/Desktop/BaiTap8
+cd ~/Desktop/BaiTap8
+mkdir pc1 pc2 pc3 pc4 switch
+touch pc1.startup pc2.startup pc3.startup pc4.startup switch.startup
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-10-09-06-Screen%20Shot%202021-10-04%20at%2010.09.01.png" width="600">
+
+### Thiết lập các file
+
+:::: tabs
+
+  ::: tab lab.conf
+  ```txt
+  pc1[0]=A
+  pc2[0]=B
+  pc3[0]=C
+  pc4[0]=D
+  switch[0]=A
+  switch[1]=B
+  switch[2]=C
+  switch[3]=D
+  ```
+  :::
+
+  ::: tab pc1.startup
+  ```txt
+  ifconfig eth0 10.0.0.10/24 up
+  ifconfig eth0 hw ether 00:00:00:00:00:10
+  ```
+  :::
+
+  ::: tab pc2.startup
+  ```txt
+  ifconfig eth0 10.0.0.20/24 up
+  ifconfig eth0 hw ether 00:00:00:00:00:20
+  ```
+  :::
+
+  ::: tab pc3.startup
+  ```txt
+  ifconfig eth0 10.0.0.30/24 up
+  ifconfig eth0 hw ether 00:00:00:00:00:30
+  ```
+  :::
+
+  ::: tab pc4.startup
+  ```txt
+  ifconfig eth0 10.0.0.40/24 up
+  ifconfig eth0 hw ether 00:00:00:00:00:40
+  ```
+  :::
+
+  ::: tab switch.startup
+  ```txt
+  ifconfig eth0 up
+  ifconfig eth0 hw ether 00:00:00:00:10:10
+  ifconfig eth1 up
+  ifconfig eth1 hw ether 00:00:00:00:20:20
+  ifconfig eth2 up
+  ifconfig eth2 hw ether 00:00:00:00:30:30
+  ifconfig eth3 up
+  ifconfig eth3 hw ether 00:00:00:00:40:40
+  brctl addbr br0
+  brctl addif br0 eth0
+  brctl addif br0 eth1
+  brctl addif br0 eth2
+  brctl addif br0 eth3
+  brctl stp br0 on
+  ifconfig br0 up
+  ```
+  :::
+::::
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-11-06-51-4f3ba542094ec010995f.jpg">
+
+::: tip 🤔 GIẢI THÍCH
+
+- Chỉ số in <mark>màu vàng</mark> là địa chỉ vật lý
+
+- `hw ether` là gắn địa chỉ `MAC` cho mạng
+
+- Trong file `switch.startup` : 
+
+  1. Tạo ra cầu nối tên là `br0` và nối ở các nhánh khác nhau
+
+  2. Lệnh `addbr` : tạo ra một cầu nối nối (`br0`, `br1`...) để nối nhánh `A`,`B`,`C` và `D` lại
+
+  3. Lệnh `addif` : Đăng ký các cổng của `switch` ảo và cầu nối. Các cổng thuộc chung 1 cầu nối thì truyền dữ liệu cho nhau
+
+  4. Lệnh `stp <name_of_bridge>` : Kích hoạt giải thuật `STP` trên một cầu nối của `switch` ảo
+
+  5. Lệnh `ifconfig <name_of_bridge>` : Kích hoạt cầu nối (`br0`, `br1`...)
+:::
+
+
+### Khởi tạo hệ thống máy ảo
+
+Sử dụng lệnh `Kathara` sau : 
+
+```sh
+kathara lstart pc1 pc2 pc3 pc4 switch
+```
+
+Trên thiết bị `switch` sử dụng `MAC Lookup Table` bằng lệnh sau : 
+
+```sh
+brctl showmacs br0
+```
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-10-55-01-Screenshot%20from%202021-10-04%2010-54-32.png">
+
+Trên máy ảo `pc1`, `pc3`, `switch` thực hiện lệnh `tcpdump` như sau :
+
+:::: tabs
+
+  ::: tab pc1
+  ```sh
+  tcpdump -e -q -w /shared/BT8_pc1.pcap
+  ```
+  :::
+  
+  ::: tab pc2
+  ```sh
+  tcpdump -e -q -w /shared/BT8_pc2.pcap
+  ```
+  :::
+  
+  ::: tab switch
+  ```sh
+  tcpdump -e -q -w /shared/BT8_switch.pcap
+  ```
+  :::
+::::
+
+::: tip 🤔 GIẢI THÍCH
+
+- `-e` : Thay vì hiển thị địa chỉ `IP` sẽ được thay thế bằng địa chỉ `MAC`
+
+- `-q` : Hiển thị ít thông tin hơn
+
+- `-w` : Xuất file ra đường dẫn cụ thể
+:::
+
+Từ `pc2` thực hiện ping tới `pc3` bằng lệnh `ping 10.0.0.30 -c 10`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-11-42-42-Screen%20Shot%202021-10-04%20at%2011.42.31.png">
+
+Thực hiện gõ lại lệnh `brctl showmacs br0` trên `switch` và xem khác biệt : 
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-11-44-44-Screenshot%20from%202021-10-04%2011-44-00.png">
+
+::: tip 💡 NHẬN XÉT
+
+Sau khi sử dụng lệnh `ping` từ `switch` đã sàn lọc lại các địa chỉ vật lý của các máy hiện có và cập nhật nó vào trong `MAC Lookup Table`
+:::
+
+### Phân tích gói pcap trên WireShark
+
+Trong thư mục `shared` ở `BaiTap8`, có chứa các file `.pcap` đã được phân tích trước đó
+
+#### Hãy mở file `BT8_switch.pcap` bằng `WireShark`: 
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-12-55-11-Screenshot%20from%202021-10-04%2012-54-43.png">
+
+##### Chọn khung giao diện có giao thức `ARP` đến từ địa chỉ `MAC` : `00:00:00:00:00:20`
+
+> Trên hình là khung số `8`
+
+::: tip 💡 NHẬN XÉT
+
+- `Switch` nhận được khung dữ liệu này vì `pc2` đã **ping** tới `pc3`. `pc2` truyền thông điệp tới `switch` để tìm địa chỉ `MAC` của `pc3`
+
+- Khung dữ liệu này có ý nghĩa `switch` đã nhận được yêu cầu tìm địa chỉ vật lý của `pc3` mà `pc2` gửi tới
+:::
+
+##### Chọn khung giao diện có giao thức `ARP` đến từ địa chỉ `MAC` : `00:00:00:00:00:30`
+
+> Trên hình là khung số `9`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-12-59-03-Screen%20Shot%202021-10-04%20at%2012.58.53.png">
+
+
+::: tip 💡 NHẬN XÉT
+
+- `Switch` nhận được khung dữ liệu này vì đã tìm thấy được địa chỉ vật lý của `pc3`
+
+- Khung dữ liệu này có ý nghĩa là `switch` đã gửi địa chỉ vật lý của `pc3` tới `pc2`
+:::
+
+#### Mở file `BT8_pc1.pcap` bằng `WireShark`
+
+##### Chọn khung dữ liệu có giao thức `ARP` đến từ địa chỉ MAC `00:00:00:00:00:20`
+
+> Trên hình là khung `43`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-13-03-30-Screen%20Shot%202021-10-04%20at%2013.03.25.png">
+
+::: tip 💡 NHẬN XÉT
+
+- `pc1` nhận được dữ liệu này vì `switch` truyền quảng bá khung dữ liệu ra tất cả các cổng để tìm được địa chỉ vật lý của `pc3`
+
+- Khung dữ liệu này có ý nghĩa `pc1` sẽ không hồi đáp vì `10.0.0.30` không phải là IP của `pc1`
+:::
+
+#### Mở file `BT8_pc3.pcap` bằng `WireShark`
+
+##### Chọn khung dữ liệu có giao thức `ARP` đến từ địa chỉ MAC `00:00:00:00:00:20`
+
+> Trên hình là khung `30`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-13-07-25-Screen%20Shot%202021-10-04%20at%2013.07.17.png">
+
+::: tip 💡 NHẬN XÉT
+
+- `pc3` nhận được khung này vì `switch` truyền bá khung dữ liệu ra tất cả các cổng để tìm địa chỉ vật lý của `pc3`
+
+- `pc3` sẽ phản hồi khung này, vì địa chỉ của `pc3` là `10.0.0.30` khớp với địa chỉ `switch` đang tìm kiếm
+:::
+
+---
+
+::: tip 📝 KẾT LUẬN
+
+- Sau khi thực hiện `ping` giữa 2 máy ảo có cùng `switch` thì `switch` sẽ truyền dữ liệu tìm kiếm đến tất cả các thiết bị được `switch` nối kết trong cùng mạng `LAN`
+
+- Sau đó `switch` **học** được địa chỉ vật lý của các máy tính đó và cập nhật vào trong `MAC Lookup Table`
+:::
+
+### Huỷ hệ thóng máy ảo
+
+Sử dụng lệnh sau để huỷ hệ thống máy ảo vừa tạo : 
+
+```sh
+kathara wipe
+```
+
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-13-13-37-Screen%20Shot%202021-10-04%20at%2013.13.33.png" width="600">
+
+## 3. Bài tập 9
+
+::: tip 💡 MÔ HÌNH
+
+Xây dụng mô hình mạng như sau : 
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/04-13-14-34-Screen%20Shot%202021-10-04%20at%2013.14.27.png">
+:::
+
+## 4. Bài tập 10
+
+## 5. Bài tập 11
