--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
@@ -652,3 +652,5 @@ $ kathara wipe
 ```
 
 > <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/20-19-45-19-Screen%20Shot%202021-09-20%20at%2019.45.14.png" width="600">
+
+<comment/>
