--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
@@ -1,5 +1,7 @@
 # Thực hành buổi 1
 
+[Download tài liệu buổi 1](https://github.com/Zenfection/zenctu/raw/main/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/file/1.pdf)
+
 ## I.Chuẩn bị 
 
 ### Cài đặt Máy Ảo Ubuntu
