--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
@@ -1,5 +1,7 @@
 # Thực hành buổi 2
 
+[Download tài liệu buổi 1](https://github.com/Zenfection/zenctu/raw/main/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/file/2.pdf)
+
 ## 1.Chuẩn bị
 
 ### Giới thiệu `WireShark` <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/09/24-12-57-59-CAAUmNO1.png" width="35">
