--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
@@ -1,5 +1,7 @@
 # Thực hành buổi 3
 
+[Download tài liệu buổi 1](https://github.com/Zenfection/zenctu/raw/main/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/file/3.pdf)
+
 ## 1. Bài tập 8
 
 ::: tip 💡 MÔ HÌNH
