--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
@@ -1,3 +1,5 @@
 # Buổi hành buỗi 5
 
+[Download tài liệu buổi 1](https://github.com/Zenfection/zenctu/raw/main/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/file/5.pdf)
+
 <comment/>
