--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
@@ -1,4 +1,4 @@
-# Bài thực hành 1
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-42-05-icons8-1_cute.png" width="45"> Bài thực hành 1
 
 Trong bài này bạn cần nắm bắt các mục như sau : 
 
@@ -26,9 +26,9 @@ Sử dụng các thư viện sau:
 Tất cả các đỉnh trong đồ thị bắt đầu từ `1` thay vì `0`, nên hãy để ý rõ không thì sai !!!
 :::
 
-> Download thư viện [list.h]()
+> ⇣ Download thư viện [list.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/source/list.h)
 
-## Cấu trúc đồ thị
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-44-57-icons8-tree_structure.png" width="35"> Cấu trúc đồ thị
 
 ### Danh sách đỉnh cung
 
@@ -56,7 +56,7 @@ typedef struct {
 } Graph;
 ```
 
-## Các hàm thao tác đồ thị
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-45-33-icons8-service.png" width="35"> Các hàm thao tác đồ thị
 
 ### Hàm nhập cơ bản
 
