--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/2.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/2.md
@@ -1,8 +1,35 @@
-# Bài thực hành 2
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-42-09-icons8-2_cute.png" width="45"> Bài thực hành 2
 
-### Duyệt đồ thị theo chiều sâu
+Trong bài này bạn cần nắm bắt các mục như sau : 
 
-#### Phương pháp ngăn xếp
+> - Duyệt đồ thị theo chiều `sâu` và `rộng`
+> 
+> - Kiểm tra tính liên thông và liên thông mạnh của đồ thị
+>
+> - Kiểm tra đồ thị có chu trình không
+
+::: tip 💡 THƯ VIỆN
+
+Sử dụng các thư viện sau:
+
+```c:no-line-numbers
+#include <stdio.h>    // thư viện cơ bản của C
+#include <stdbool.h>  // hỗ trợ true/false cho C
+#include "list.h"     // thư viện cá nhân hỗ trợ danh sách
+#include "stack.h"    // thư viện cá nhân hỗ trợ ngăn xếp
+```
+:::
+
+> ⇣ Download thư viện [list.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/source/list.h) và [stack.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/source/stack.h)
+
+::: warning ⚠️ LƯU Ý
+
+Tất cả các đỉnh trong đồ thị bắt đầu từ `1` thay vì `0`, nên hãy để ý rõ không thì sai !!!
+:::
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-49-35-icons8-depth.png" width="40"> Duyệt đồ thị theo chiều sâu
+
+### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-50-21-icons8-pancake.png" width="30"> Phương pháp ngăn xếp
 
 > Trả về danh sách duyệt đồ thị theo chiều sâu dùng `ngăn xếp`
 
@@ -44,7 +71,12 @@ List DFS(Graph G, int x){
 }
 ```
 
-#### Sử dụng đệ quy
+::: warning ⚠️ CHÚ Ý
+
+Hàm trả về đầy đủ các đỉnh kể cả khi đồ thị `không liên thông`, nên nếu bạn có nhu cầu khác hãy sử từ dòng `27` tới `32`
+:::
+
+### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-51-03-icons8-reset.png" width="30"> Sử dụng đệ quy
 
 ```c
 void DFS_Re(Graph G, int v, bool visited[]){
@@ -60,4 +92,129 @@ void DFS_Re(Graph G, int v, bool visited[]){
 }
 ```
 
-### Duyệt đồ thị theo chiều rộng
+::: warning ⚠️ LƯU Ý 
+
+Sửa hàm này theo nhu cầu của bạn
+:::
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-49-40-icons8-surface.png" width="35"> Duyệt đồ thị theo chiều rộng
+
+> Sử dụng danh sách (tương đương hàng đợi)
+
+```c
+void subBFS(Graph G, List queue, List *L){
+    while (!emptyList(queue)){
+        int u = elementAt(&queue);
+        if(memberList(u, *L)) continue;
+        insertList(u, L);
+        List temp = neighbors(G,u);
+        for(int i = 0; i < temp.Size; i++){
+            int v = temp.Data[i];
+            if(!memberList(v, *L) && !memberList(v, queue)){
+                insertList(v, &queue);
+            }
+        }
+    }
+}
+List BFS(Graph G, int x){    
+    List L;
+    makeNullList(&L);
+    List array = arrayGraph(G);
+    while (L.Size != G.n){
+        List queue;
+        makeNullList(&queue);
+        insertList(x,&queue);
+
+        subBFS(G,queue,&L);
+        x = 0;
+        for(int i = 0; i < array.Size; i++){
+            if(!memberList(array.Data[i], L)){
+                x = array.Data[i];
+                break;
+            }
+        }
+    }
+    return L;
+}
+```
+
+::: warning ⚠️ CHÚ Ý
+
+Hàm trả về đầy đủ các đỉnh kể cả khi đồ thị `không liên thông`, nên nếu bạn có nhu cầu khác hãy sử từ dòng `26` tới `31`
+:::
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-15-42-29-icons8-connect.png" width="35">Tính Liên thông của đồ thị
+
+### Kiểm tra đồ thị liên thông
+
+> Là đồ thị khi một đỉnh bất kỳ có thể đi tới tất cả các đỉnh còn lại trong đồ thị
+
+::: tip 💡 TƯ TƯỞNG
+
+Sử dụng hàm `subBFS()` hoặc `subDFS()` để trả về danh sách cách đỉnh duyệt khi duyệt qua 1 lần
+
+==> Nếu số phần tử trong danh sách = với số đỉnh trong đồ thị thì `liên thông`
+:::
+
+```c
+int connectedGraph(Graph G){
+    List L; makeNullList(&L);
+    int x = 1;
+    List queue; makeNullList(&queue);
+    insertList(x,&queue);
+    subBFS(G,queue,&L); 
+    
+    //List stack; makeNullStack(&stack);
+    //pushStack(&stack, x);
+    //subDFS(G,stack,&L);
+    return L.Size == G.n;
+}
+```
+
+### Kiểm tra đồ thị liên thông mạnh
+
+> Sử dụng lại hàm [duyệt theo chiều sâu bằng đệ quy](/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/2.md#su-dung-đe-quy) 
+
+```c
+bool checkConnectedStrong(Graph G){
+    for (int i = 1; i <= G.n; i++){
+        bool visited[G.n + 1]; // bắt đầu từ đỉnh 1 thay vì 0
+        for (int i = 1; i <= G.n; i++){ // khởi tạo ban đầu là false
+            visited[i] = false;
+        }
+        DFS_Re(G, i, visited); // duyệt đệ quy DFS đồ thị
+        for (int i = 1; i <= G.n; i++){
+            if(!visited[i]){ // nếu có 1 đỉnh chưa duyệt được thì false
+                return false;
+            }
+        }
+    }
+    return true;
+}
+```
+
+### Đếm số liên thông mạnh trong đồ thị
+
+
+```c
+int countStrongConnected(Graph G){
+    int count = 0;
+    if(checkConnectedStrong(G)){
+        return 1;
+    }
+    for (int i = 1; i <= G.n; i++){
+        bool visited[G.n + 1];
+        for (int i = 1; i <= G.n; i++){ // khởi tạo ban đầu là false
+            visited[i] = false;
+        }
+        DFS_Re(G, i, visited); // duyệt một lần
+        for (int i = 1; i <= G.n; i++){
+            if(!visited[i]){
+                count++;
+                break;
+            }
+        }
+    }
+    return count;
+}
+```
