--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/3.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/3.md
@@ -1,1 +1,93 @@
-# Bài thực hành 3
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-42-15-icons8-3_cute.png" width="45"> Bài thực hành 3
+
+Trong bài này bạn cần nắm bắt các mục như sau : 
+
+> - Tìm đường đi ngắn nhất bằng `Dijkstra` và `bellman-Ford`
+> 
+> - Kiểm tra chu trình âm và ứng dụng của đường đi ngắn nhất
+
+::: tip 💡 THƯ VIỆN
+
+Sử dụng các thư viện sau:
+
+```c:no-line-numbers
+#include <stdio.h>    // thư viện cơ bản của C
+#include <stdbool.h>  // hỗ trợ true/false cho C
+#include "list.h"     // thư viện cá nhân hỗ trợ danh sách
+```
+:::
+
+> ⇣ Download thư viện [list.h](https://github.com/Zenfection/zenctu/blob/main/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/source/list.h)
+
+::: warning ⚠️ LƯU Ý
+
+Tất cả các đỉnh trong đồ thị bắt đầu từ `1` thay vì `0`, nên hãy để ý rõ không thì sai !!!
+:::
+
+## Tìm đường đi ngắn nhất bằng `Dijkstra`
+
+```c
+void dijksta(Graph G, int s, List *parrent, List *cost){
+    bool mark[50];
+    int u,v;
+    for (u = 1; u <= G.n; u++){ //* khởi tạo mảng
+        cost->Data[u] = 999;
+        mark[u] = false;
+        parrent->Data[u] = 0;
+    }
+    parrent->Size = cost->Size = G.n;
+
+    cost->Data[s] = 0; //* đi từ đỉnh s, về đến đỉnh 
+    parrent->Data[s] = -1; //* đỉnh bắt đầu không có parent 
+
+    for (int i = 1; i <= G.n; i++){
+        int min_pi = 999;
+        for (int j = 1; j <= G.n; j++){
+            //* Tìm đỉnh chưa duyệt có giá trị min_pi
+            if(!mark[j] && cost->Data[j] < min_pi){
+                min_pi = cost->Data[j];
+                u = j;
+            }
+        }
+        mark[u] = 1; //* đánh dấu đã duyệt xong đỉnh đó
+        for (v = 1; v <= G.n; v++){
+            if(G.A[u][v] != 0 && !mark[v]){
+                int x = cost->Data[u] + G.A[u][v];
+                if(x < cost->Data[v]){
+                    cost->Data[v] = x;
+                    parrent->Data[v] = u;
+                }
+            }
+        }
+    }
+}
+```
+
+## Tìm đường đi ngắn nhất bằng `bellman-Ford`
+
+```c
+void bellmanFord(Graph G, int s,List *cost, List *parrent){
+    for(int i=1; i<= G.n; i++){ // khởi tạo ban đầu
+        cost->Data[i] = 999;
+        parrent->Data[i] = 0;
+    }
+
+    cost->Size = parrent->Size = G.n;
+    
+    cost->Data[s] = 0;
+    parrent->Data[s] = -1;
+
+    for(int it = 1; it < G.n; it++){
+        for(int k = 1; k <= G.m; k++){
+            int u = G.edge[k].u;
+            int v = G.edge[k].v;
+            int w = G.edge[k].w;
+            int x = cost->Data[u] + w;
+            if(x < cost->Data[v]){
+                cost->Data[v] = x;
+                parrent->Data[v] = u;
+            }
+        }
+    }
+}
+```
