--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/2.md
@@ -125,3 +125,5 @@ Xây dưng đồ thị ảnh hưởng cho các thành viên lãnh đạo của m
 Dữ liệu : chủ tịch, giám đốc nghiên cứu & phát triển, giám đốc marketing, giám đốc điều hành, trưởng phòng tài chính
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/03-23-20-18-Screen%20Shot%202021-06-03%20at%2023.20.15.png" class="imageZen">
+
+<comment/> 
