--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/3.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/3.md
@@ -158,3 +158,5 @@ Sau đây là ví dụ của các dạng đồ thị trên :
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/17-09-31-25-18-12-29-46-Screen_Shot_2021-06-18_at_12.29.44-removebg-preview.png" width="500">
 :::
+
+<comment/> 
