--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/6.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/6.md
@@ -98,3 +98,5 @@ Số cạnh tối đa của một đồ thị không liên thông `G` gồm `n` 
 | Liên thông mạnh                                                                  | Liên thông yếu                                           | Liên thông một phần                                                       |
 | -------------------------------------------------------------------------------- | -------------------------------------------------------- | ------------------------------------------------------------------------- |
 | đường đi từ `a` tới `b` và từ `b` tới `a` với mọi cặp đỉnh `a` và `b` của đồ thị | có đường đi giữa `2` đỉnh bất kỳ của đồ thị vô hướng nền | mọi cặp đỉnh `a` và `b` bất kỳ, có ít nhất một đỉnh đến được đỉnh còn lại |
+
+<comment/> 
