--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/7.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/7.md
@@ -4,7 +4,7 @@
 
 ::: warning ⚠️ LƯU Ý
 
-Xem video [bài trước](/course/CT175-Ly_thuyet_do_thi/Tailieu/6.md) và xem thêm video dưới đây
+Xem video [bài trước](/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/6.md) và xem thêm video dưới đây
 :::
 
 <div class="videoZen">
@@ -13,7 +13,7 @@ Xem video [bài trước](/course/CT175-Ly_thuyet_do_thi/Tailieu/6.md) và xem t
 
 ## 1. Duyệt theo chiều sâu (`DFS`)
 
-::: 🤔 Ý TƯỞNG
+::: tip 🤔 Ý TƯỞNG
 
 Khởi điểm từ một đỉnh, đi theo các cạnh xa nhất có thể.
 :::
@@ -60,3 +60,5 @@ Chọn `d` ⇨ `h` ⇨ `e` ⇨ `b` ⇨ `f` ⇨ `c` ⇨ `a` ⇨ `g`
 
 Thực chất `BFS` theo cơ chế `Hàng đợi` còn `DFS` theo cớ chế `Ngăn Xếp`
 :::
+
+<comment/> 
