--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
@@ -1,1 +1,21 @@
 # Bài 8. Đồ thị dạng Cây
+
+
+## Định nghĩa
+
+- Cây (`tree`) là một **đồ thị vô hướng**, **liên thông** và **không có chu trình**
+
+- Rừng (`forest`) là một đồ thị mà mỗi thành phần **liên thông** của nó là một cây
+
+  ==> Suy ra, đồ thị không có chu trình là một rừng
+
+## Tính chất của cây
+
+::: tip Định lý về đỉnh treo
+
+Nếu một cây `T` gồm `n` đỉnh với `n >= 2` thì `T` chứa ít nhất 2 đỉnh treo
+:::
+
+
+
+<comment/> 
