--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/1.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/1.md
@@ -49,3 +49,5 @@ Liệu chỉ với bốn màu có thể tô màu một bản đồ bất kỳ sa
 | [Francis Guthrie](https://en.wikipedia.org/wiki/Francis_Guthrie)                                                      | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-00-18-show-photo.jpg" title="" alt="show-photo.jpg" width="120">                               | 1831 - 1899                                                                                                                                    |
 | [Kenneth Appel](https://en.wikipedia.org/wiki/Kenneth_Appel)                                                          | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-02-23-ken-appel-150.jpg" title="" alt="ken-appel-150.jpg" width="122">                         | 1932 - 2013                                                                                                                                    |
 | [Wolfgang Haken](https://en.wikipedia.org/wiki/Wolfgang_Haken)                                                        | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/06/15-18-01-36-220px-Wolfgang_Haken_2008.jpg" title="" alt="220px-Wolfgang_Haken_2008.jpg" width="136"> | 1928 - ...                                                                                                                                     |
+
+<comment/> 
