--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/5.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/5.md
@@ -129,3 +129,4 @@ Với những ma trận vòng thì các định `n-n` là `1` (*để ý đườ
 | 4   | 0   | 0     | 0   | 0     | 0     | 0   | 1     | 1     | 1     |
 |     | **(1)** | **(2,3)** | **(2)** | **(2,3)** | **(2,3)** | **(3)** | **(3,4)** | **(3,4)** | **(1,4)** |
 
+<comment/> 
