--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Tailieu/8.md
@@ -16,6 +16,46 @@
 Nếu một cây `T` gồm `n` đỉnh với `n >= 2` thì `T` chứa ít nhất 2 đỉnh treo
 :::
 
+### Tính chất
 
+Đơn đồ thị `T=(V, E)` là một đồ thị vô hướng `n` đỉnh. Khi đó, các mệnh đề sau tương đương :
+
+  1. `T` là một cây liên thông và mỗi cạnh của nó đều là cạnh cầu
+
+  2. `T` không chứa chu trình (nhưng thêm vào 1 cạnh bất kỳ thì thu được 1 chu trình) và có `n-1` cạnh
+
+
+  3. Hai đỉnh bất kỳ của `T` được nối với nhau bởi đúng một đường đơn
+
+## Cây khung của đồ thị
+
+- Nếu đồ thị bộ phận `T` của đồ thị vô hướng liên thông, `G=(V, E)` là một cya6 thì khi đó cây `T` được gọi là **cây khung** (`spanning tree`) của đồ thị `G`
+
+- Cây khung còn có tên gọi khác là cây phủ, cây bao trùm, cây tối đại.
+
+::: tip VÍ DỤ CÂY KHUNG
+
+<br>
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/12-21-03-34-Screenshot%202021-10-12%20210323.png" width="500">
+
+- Đồ thị `2` và `3` là cây khung của đồ thị `1` vì nó là đồ thị bộ phận và không có chu trình
+:::
+
+Một đơn đồ thị là liên thông nếu nó là cây khung
+
+Định lý `Borchart`, `Sylvester`, `Cayley` 
+
+Số cây khung của đồ thị đầy đủ `Kₙ` là `nⁿ⁻²`
+
+## Cây khung nhỏ nhất lớn nhất
+
+Cho `G=(V, E)` là đồ thị vô hướng, liên thông. Mỗi cạnh `e` thuộc `E` của đồ thị được gán một `trọng số` hay `chi phí` không âm, gọi là độ dài của cạnh đó.
+
+Giả sử `T=(Vₜ, Eₜ)` là cây khung của đồ thị `G`. Ta gọi độ dài `C(T)` của cây khung `T` là tổng độ dài các cạnh của nó
+
+<img src="https://render.githubusercontent.com/render/math?math=$c(T)=\sum_{e \in E_{T}} c(e)$">
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/12-22-09-39-Screenshot%202021-10-12%20220924.png">
 
 <comment/> 
